--- a/BeetrootProject1/lesson-23-Dependencies/lesson-23-Dependencies.csproj
+++ b/BeetrootProject1/lesson-23-Dependencies/lesson-23-Dependencies.csproj
@@ -6,4 +6,13 @@
     <RootNamespace>lesson_23_Dependencies</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="Lesson23.Contracts\Lesson23.Contracts.csproj" />
+    <ProjectReference Include="Lesson23.Domain\Lesson23.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
