--- a/BeetrootProject1/Lesson.23-Dependencies/Lesson.23-Dependencies.csproj
+++ b/BeetrootProject1/Lesson.23-Dependencies/Lesson.23-Dependencies.csproj
@@ -6,4 +6,12 @@
     <RootNamespace>Lesson._23_Dependencies</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lesson23.Domain\Lesson23.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
